; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_audio-device-enum.c_coreaudio_get_device_id.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/mac-capture/extr_audio-device-enum.c_coreaudio_get_device_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_id_data = type { i32, i32, i32*, i32 }

@get_device_id = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @coreaudio_get_device_id(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.device_id_data, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %6 = getelementptr inbounds %struct.device_id_data, %struct.device_id_data* %5, i32 0, i32 0
  %7 = load i32, i32* %3, align 4
  store i32 %7, i32* %6, align 8
  %8 = getelementptr inbounds %struct.device_id_data, %struct.device_id_data* %5, i32 0, i32 1
  %9 = load i32*, i32** %4, align 8
  %10 = ptrtoint i32* %9 to i32
  store i32 %10, i32* %8, align 4
  %11 = getelementptr inbounds %struct.device_id_data, %struct.device_id_data* %5, i32 0, i32 2
  store i32* null, i32** %11, align 8
  %12 = getelementptr inbounds %struct.device_id_data, %struct.device_id_data* %5, i32 0, i32 3
  store i32 0, i32* %12, align 8
  %13 = load i32, i32* @get_device_id, align 4
  %14 = call i32 @enum_devices(i32 %13, %struct.device_id_data* %5)
  %15 = getelementptr inbounds %struct.device_id_data, %struct.device_id_data* %5, i32 0, i32 1
  %16 = load i32, i32* %15, align 4
  ret i32 %16
}

declare dso_local i32 @enum_devices(i32, %struct.device_id_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
